--- a/wireprotocol-api/build.gradle
+++ b/wireprotocol-api/build.gradle
@@ -19,4 +19,5 @@ dependencies {
 
     compileOnly("org.projectlombok:lombok:1.18.38")
     annotationProcessor("org.projectlombok:lombok:1.18.38")
+    implementation 'org.reflections:reflections:0.10.2'
 }
